--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
-.card-body {
+/* .card-body {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     gap: 10px;
-}
+} */
 
 img {
-    border: 3px solid #666;
-    background-color: #ddd;
     border-radius: .5em;
-    padding: 10px;
+    /* padding: 10px; */
+    border: 1px solid red;
     cursor: move;
+    margin-top: 5px;
 }
 
 img .over {
